# ogre-script-serializer

./: ProjectHome.md
branches/config-support-ror/: CMakeLists.txt
branches/config-support-ror/src/: CMakeLists.txt
branches/config-support-ror/src/Plugin_ScriptSerializer/: CMakeLists.txt
branches/config-support-ror/src/Plugin_ScriptSerializer/include/: ScriptSerializerManager.h  ScriptSerializerPrerequisites.h
branches/config-support-ror/src/Plugin_ScriptSerializer/src/: ScriptSerializer.cpp  ScriptSerializerDll.cpp  ScriptSerializerManager.cpp  ScriptSerializerPreCompiled.cpp
branches/script-cache/: CMakeLists.txt
branches/script-cache/src/Plugin_ScriptSerializer/include/: ScriptSerializerPlugin.h
branches/script-cache/src/Plugin_ScriptSerializer/src/: ScriptSerializerManager.cpp  ScriptSerializerPlugin.cpp
branches/shader-cache/: CMakeLists.txt
branches/shader-cache/src/: CMakeLists.txt
branches/shader-cache/src/Plugin_ScriptSerializer/include/: ScriptSerializer.h  ScriptSerializerPrerequisites.h
branches/shader-support/src/Plugin_ScriptSerializer/: CMakeLists.txt
branches/shader-support/src/Plugin_ScriptSerializer/include/: ScriptSerializerManager.h
branches/shader-support/src/Plugin_ScriptSerializer/src/: ScriptSerializerDll.cpp  ScriptSerializerManager.cpp
docs/: ScriptCache.cfg
src/: CMakeLists.txt
src/Plugin_ScriptProfiler/include/: SerializerProfiler.h  SerializerProfilerPlugin.h
src/Plugin_ScriptProfiler/src/: SerializerProfilerDll.cpp  SerializerProfilerPlugin.cpp
src/Plugin_ScriptSerializer/: CMakeLists.txt
src/Plugin_ScriptSerializer/include/: ScriptSerializerManager.h  ScriptSerializerMemoryAllocatorConfig.h  ShaderSerializer.h
src/Plugin_ScriptSerializer/src/: ScriptSerializerManager.cpp  ScriptSerializerPlugin.cpp  ShaderSerializer.cpp
trunk/src/Plugin_ScriptProfiler/: CMakeLists.txt
trunk/src/Plugin_ScriptProfiler/include/: SerializerProfilerPreCompiled.h  SerializerProfilerPrerequisites.h
trunk/src/Plugin_ScriptProfiler/src/: SerializerProfiler.cpp  SerializerProfilerPreCompiled.cpp
trunk/src/Plugin_ScriptSerializer/include/: ScriptSerializer.h  ScriptSerializerManager.h  ScriptSerializerPreCompiled.h
trunk/src/Plugin_ScriptSerializer/src/: ScriptSerializer.cpp  ScriptSerializerManager.cpp
